block break/place mechanics with crash safe